--- a/translations/de.json
+++ b/translations/de.json
@@ -1,6 +1,7 @@
 {
     "TITLE": "Magic Mirror Menu",
     "SHUTDOWN_MENU_NAME": "Ausschalten",
+    "NO_MODULES_LOADED": "Keine Module geladen.",
     "EDIT_MENU_NAME": "Editieren",
     "SHUTDOWN": "Ausschalten",
     "RESTART": "Neu starten",
