--- a/translations/de.json
+++ b/translations/de.json
@@ -5,6 +5,9 @@
     "EDIT_MENU_NAME": "Editieren",
     "SHUTDOWN": "Ausschalten",
     "RESTART": "Neu starten",
+    "RESTARTMM": "Starte MagicMirror2 neu",
+    "MONITORON": "Bildschirm einschalten",
+    "MONITOROFF": "Bildschirm ausschalten",
     "BACK": "Zurück",
     "ERROR": "Fehler!",
     "LOADING": "Lade &hellip;",
