--- a/translations/en.json
+++ b/translations/en.json
@@ -5,6 +5,9 @@
     "EDIT_MENU_NAME": "Edit modules",
     "SHUTDOWN": "Shutdown",
     "RESTART": "Restart",
+    "RESTARTMM": "Restart MagicMirror2",
+    "MONITORON": "Turn monitor ON",
+    "MONITOROFF": "Turn monitor OFF",
     "BACK": "Back",
     "ERROR": "Error!",
     "LOADING": "Loading &hellip;",
