fix some bugs and updated visually

--- a/translations/de.json
+++ b/translations/de.json
@@ -5,7 +5,7 @@
     "EDIT_MENU_NAME": "Editieren",
     "SHUTDOWN": "Ausschalten",
     "RESTART": "Neu starten",
-    "RESTARTMM": "Starte MagicMirror2 neu",
+    "RESTARTMM": "Starte MagicMirror<sup>2</sup> neu",
     "MONITORON": "Bildschirm einschalten",
     "MONITOROFF": "Bildschirm ausschalten",
     "BACK": "Zurück",
