--- a/translations/en.json
+++ b/translations/en.json
@@ -5,7 +5,7 @@
     "EDIT_MENU_NAME": "Edit modules",
     "SHUTDOWN": "Shutdown",
     "RESTART": "Restart",
-    "RESTARTMM": "Restart MagicMirror2",
+    "RESTARTMM": "Restart MagicMirror<sup>2</sup>",
     "MONITORON": "Turn monitor ON",
     "MONITOROFF": "Turn monitor OFF",
     "BACK": "Back",
