visibility changes, prep for 2.1.0

--- a/translations/de.json
+++ b/translations/de.json
@@ -16,6 +16,9 @@
     "RESTARTMM": "Starte MagicMirror<sup>2</sup> neu",
     "SHUTDOWN": "Ausschalten",
 
+    "SHOWALL": "Zeige alle",
+    "HIDEALL": "Verstecke alle",
+
     "NO_MODULES_LOADED": "Keine Module geladen.",
     "SAVE": "Als Standard speichern",
 
