module data action + link to magic mirror homepage + sort changelog

--- a/translations/de.json
+++ b/translations/de.json
@@ -4,6 +4,7 @@
     "EDIT_MENU_NAME": "Module editieren",
     "SHUTDOWN_MENU_NAME": "Ausschalten",
     "CONFIGURE_MENU_NAME": "Einstellungen",
+    "VIEW_MIRROR": "MagicMirror<sup>2</sup>",
 
     "BACK": "Zurück",
 
