--- a/translations/en.json
+++ b/translations/en.json
@@ -4,6 +4,7 @@
     "EDIT_MENU_NAME": "Edit modules",
     "SHUTDOWN_MENU_NAME": "Power",
     "CONFIGURE_MENU_NAME": "Settings",
+    "VIEW_MIRROR": "MagicMirror<sup>2</sup>",
 
     "BACK": "Back",
 
