--- a/translations/de.json
+++ b/translations/de.json
@@ -35,6 +35,9 @@
     "NO_MODULES_LOADED": "Keine Module geladen.",
     "SAVE": "Speichern",
 
+    "LOAD_ERROR": "Wenn du diese Nachricht lesen kannst, konnte die javascript Datei nicht korrekt geladen werden. Bitte folge dem Link, und sehe nach, ob dies ein bekanntes Problem mit deinem Browser ist:",
+    "ISSUE_LINK": "Github Issue Seite",
+
     "DONE": "Fertig.",
     "ERROR": "Fehler!",
     "LOADING": "Lade &hellip;"
