--- a/translations/de.json
+++ b/translations/de.json
@@ -33,6 +33,7 @@
     "NO_HEADER": "(keine ;Uumlberschrift)",
     "NO_POSITION": "(unsichtbar)",
     "ADD_ENTRY": "Neuer Eintrag",
+    "NEW_ENTRY_NAME": "(Name eintragen)",
 
     "NO_MODULES_LOADED": "Keine Module geladen.",
     "SAVE": "Speichern",
