--- a/translations/en.json
+++ b/translations/en.json
@@ -33,6 +33,7 @@
     "NO_HEADER": "(no header)",
     "NO_POSITION": "(invisible)",
     "ADD_ENTRY": "Add entry",
+    "NEW_ENTRY_NAME": "(enter name of new entry)",
 
     "NO_MODULES_LOADED": "No module loaded.",
     "SAVE": "Save",
