hint to save changes

--- a/translations/de.json
+++ b/translations/de.json
@@ -35,6 +35,7 @@
     "ADD_ENTRY": "Neuer Eintrag",
     "NEW_ENTRY_NAME": "(Name eintragen)",
     "DELETE_ENTRY": "L&ouml;schen",
+    "UNSAVED_CHANGES": "Nicht gespeicherte &Auml;nderungen",
 
     "NO_MODULES_LOADED": "Keine Module geladen.",
     "SAVE": "Speichern",
