--- a/translations/de.json
+++ b/translations/de.json
@@ -45,5 +45,14 @@
 
     "DONE": "Fertig.",
     "ERROR": "Fehler!",
-    "LOADING": "Lade &hellip;"
+    "LOADING": "Lade &hellip;",
+
+    "UPDATE_MENU_NAME" : "Updates",
+    "UPDATEMM" : "Update MagicMirror<sup>2</sup>",
+
+    "REFRESHMM" : "Refresh Browser",
+
+    "ALERT_MENU_NAME" : "Alert",
+    "SENDALERT" : "SEND",
+    "HIDEALERT" : "HIDE"
 }
