--- a/translations/en.json
+++ b/translations/en.json
@@ -45,5 +45,14 @@
 
     "DONE": "Done.",
     "ERROR": "Error!",
-    "LOADING": "Loading &hellip;"
+    "LOADING": "Loading &hellip;",
+
+	"UPDATE_MENU_NAME" : "Updates",
+	"UPDATEMM" : "Update MagicMirror<sup>2</sup>",
+
+	"REFRESHMM" : "Refresh Browser",
+
+	"ALERT_MENU_NAME" : "Alert",
+	"SENDALERT" : "SEND",
+	"HIDEALERT" : "HIDE"
 }
