--- a/translations/de.json
+++ b/translations/de.json
@@ -52,6 +52,7 @@
 
     "UPDATE_MENU_NAME" : "Updates",
     "UPDATEMM" : "Update MagicMirror<sup>2</sup>",
+    "UPDATE_AVAILABLE" : "Update verf&uuml;gbar",
 
     "REFRESHMM" : "Refresh Browser",
 
