--- a/translations/en.json
+++ b/translations/en.json
@@ -53,6 +53,7 @@
 
 	"UPDATE_MENU_NAME" : "Updates",
 	"UPDATEMM" : "Update MagicMirror<sup>2</sup>",
+    "UPDATE_AVAILABLE" : "Update available",
 
 	"ALERT_MENU_NAME" : "Alert",
 	"SENDALERT" : "Send",
