installer and various updates and bugfixes

--- a/translations/en.json
+++ b/translations/en.json
@@ -44,6 +44,10 @@
     "NO_MODULES_LOADED": "No module loaded.",
     "SAVE": "Save",
 
+    "EXPERIMENTAL": "This is an experimental feature, it could corrupt your config file. Backup your config first, just in case!<br>Do you want to continue?",
+    "PANIC": "Never mind.",
+    "NO_RISK_NO_FUN": "No risk no fun!",
+
     "LOAD_ERROR": "If you see this message, an errror occured when loading the javascript file. Please go to the following link and see if this a known problem with your browser:",
     "ISSUE_LINK": "Github issue page",
 
