--- a/translations/de.json
+++ b/translations/de.json
@@ -43,6 +43,10 @@
     "NO_MODULES_LOADED": "Keine Module geladen.",
     "SAVE": "Speichern",
 
+    "EXPERIMENTAL": "Dies ist ein experimentelles Feature, es k&ouml;nnte Probleme verursachen. Mache ein Backup von deiner config!<br>Weiter machen?",
+    "PANIC": "Lieber nicht.",
+    "NO_RISK_NO_FUN": "Ich liebe das Risiko!",
+
     "LOAD_ERROR": "Wenn du diese Nachricht lesen kannst, konnte die javascript Datei nicht korrekt geladen werden. Bitte folge dem Link, und sehe nach, ob dies ein bekanntes Problem mit deinem Browser ist:",
     "ISSUE_LINK": "Github Issue Seite",
 
@@ -60,8 +64,8 @@
     "SENDALERT" : "Senden",
     "HIDEALERT" : "Verstecken",
     "FORM_TYPE" : "Typ:",
-    "FORM_ALERT" : "Klein",
-    "FORM_NOTIFICATION" : "Groß",
+    "FORM_ALERT" : "Groß",
+    "FORM_NOTIFICATION" : "Klein",
     "FORM_TITLE" : "Titel:",
     "FORM_TITLE_PLACEHOLDER" : "Title eingeben...",
     "FORM_MESSAGE" : "Nachricht:",
