--- a/translations/pt.json
+++ b/translations/pt.json
@@ -48,6 +48,9 @@
     "PANIC": "Deixa lá.",
     "NO_RISK_NO_FUN": "Quem não arrisca, não petisca!",
 
+    "CONFIRM_SHUTDOWN": "O sistema irá desligar.",
+    "CONFIRM_RESTART": "O sistema irá reiniciar.",
+
     "LOAD_ERROR": "Ocorreu um erro ao ler o seu ficheiro. Por favor, visite este website e veja se o caso aplica-se a si.",
     "ISSUE_LINK": "Página do problema no Github",
 
