--- a/translations/de.json
+++ b/translations/de.json
@@ -47,6 +47,9 @@
     "PANIC": "Lieber nicht.",
     "NO_RISK_NO_FUN": "Ich liebe das Risiko!",
 
+    "CONFIRM_SHUTDOWN": "Das System wird ausgeschaltet.",
+    "CONFIRM_RESTART": "Das System wird neu starten.",
+
     "LOAD_ERROR": "Wenn du diese Nachricht lesen kannst, konnte die javascript Datei nicht korrekt geladen werden. Bitte folge dem Link, und sehe nach, ob dies ein bekanntes Problem mit deinem Browser ist:",
     "ISSUE_LINK": "Github Issue Seite",
 
