--- a/translations/en.json
+++ b/translations/en.json
@@ -48,6 +48,9 @@
     "PANIC": "Never mind.",
     "NO_RISK_NO_FUN": "No risk no fun!",
 
+    "CONFIRM_SHUTDOWN": "The system will shut down.",
+    "CONFIRM_RESTART": "The system will restart.",
+
     "LOAD_ERROR": "If you see this message, an errror occured when loading the javascript file. Please go to the following link and see if this a known problem with your browser:",
     "ISSUE_LINK": "Github issue page",
 
