Had forgotten to add CANCEL string

--- a/translations/de.json
+++ b/translations/de.json
@@ -39,6 +39,7 @@
     "UNSAVED_CHANGES": "Nicht gespeicherte &Auml;nderungen",
     "OK": "Ok",
     "DISCARD": "Verwerfen",
+    "CANCEL": "Stornieren",
 
     "NO_MODULES_LOADED": "Keine Module geladen.",
     "SAVE": "Speichern",
