--- a/translations/pt.json
+++ b/translations/pt.json
@@ -40,6 +40,7 @@
     "UNSAVED_CHANGES": "Alterações não guardadas",
     "OK": "Ok",
     "DISCARD": "Cancelar alterações",
+    "CANCEL": "Cancelar",
 
     "NO_MODULES_LOADED": "Nenhum módulo carregado.",
     "SAVE": "Guardar",
