Changed CANCEL in sv.json to "Avbryt"

--- a/translations/sv.json
+++ b/translations/sv.json
@@ -40,7 +40,7 @@
     "UNSAVED_CHANGES": "Osparade ändringar",
     "OK": "Ok",
     "DISCARD": "Spara inte ändringar",
-    "CANCEL": "Annullera",
+    "CANCEL": "Avbryt",
 
     "NO_MODULES_LOADED": "Ingen modul laddad.",
     "SAVE": "Spara",
