--- a/translations/en.json
+++ b/translations/en.json
@@ -55,6 +55,9 @@
     "ERROR": "Error!",
     "LOADING": "Loading &hellip;",
 
+    "LOCKSTRING_WARNING": "This module was hidden by LIST_OF_MODULES, it can not be shown.",
+    "FORCE_SHOW": "Do it anyway.",
+
 	"UPDATE_MENU_NAME" : "Updates",
 	"UPDATEMM" : "Update MagicMirror<sup>2</sup>",
     "UPDATE_AVAILABLE" : "Update available",
