--- a/translations/de.json
+++ b/translations/de.json
@@ -2,7 +2,7 @@
     "TITLE": "Magic Mirror Men&uuml;",
 
     "EDIT_MENU_NAME": "Ansicht editieren",
-    "SHUTDOWN_MENU_NAME": "Ausschalten",
+    "SHUTDOWN_MENU_NAME": "Energieoptionen",
     "CONFIGURE_MENU_NAME": "Einstellungen",
     "VIEW_MIRROR": "MagicMirror<sup>2</sup>",
 
