Changed Dutch translation of CANCEL to "Annuleren"

--- a/translations/nl.json
+++ b/translations/nl.json
@@ -40,7 +40,7 @@
     "UNSAVED_CHANGES": "Onopgeslagen wijzigingen",
     "OK": "Ok",
     "DISCARD": "Wijzigingen ongedaan maken",
-    "CANCEL": "Annuleer",
+    "CANCEL": "Annuleren",
 
     "NO_MODULES_LOADED": "Geen module geladen.",
     "SAVE": "Opslaan",
