Update French translation

--- a/translations/fr.json
+++ b/translations/fr.json
@@ -1,31 +1,31 @@
 {
     "TITLE": "Magic Mirror Menu",
 
-    "EDIT_MENU_NAME": "Editer le nom du menu",
+    "EDIT_MENU_NAME": "Afficher ou cacher les modules",
     "SHUTDOWN_MENU_NAME": "Alimentation",
     "CONFIGURE_MENU_NAME": "Editer le fichier config.js",
     "VIEW_MIRROR": "MagicMirror<sup>2</sup>",
 
     "BACK": "Retour",
 
-    "BRIGHTNESS": "Luminositer",
+    "BRIGHTNESS": "Luminosité",
 
     "REFRESHMM" : "Recharger l'affichage",
-    "MONITOROFF": "Eteindre le miroire",
+    "MONITOROFF": "Eteindre le miroir",
     "MONITORON": "Allumer le miroir",
     "MONITORTIMED": "Allumer brièvement le miroir",
-    "RESTART": "Redemarrer",
-    "RESTARTMM": "Redemarrer MagicMirror<sup>2</sup>",
-    "SHUTDOWN": "Eteindre",
+    "RESTART": "Redémarrer RPI",
+    "RESTARTMM": "Redémarrer MagicMirror<sup>2</sup>",
+    "SHUTDOWN": "Eteindre RPI",
 
-    "SHOWALL": "Tour voir",
+    "SHOWALL": "Tout voir",
     "HIDEALL": "Tout cacher",
 
     "ADD_MODULE": "Ajouter un module",
     "SEARCH": "Rechercher &hellip;",
     "INSTALLED": "Installer",
-    "DOWNLOAD": "Telecharger",
-    "DOWNLOADING": "Telechargements &hellip;",
+    "DOWNLOAD": "Télécharger",
+    "DOWNLOADING": "Téléchargements &hellip;",
     "CODE_LINK": "Voir le code",
     "BY": "par",
     "ADD_THIS": "Ajouter ce module",
@@ -35,19 +35,19 @@
     "NO_HEADER": "(no header)",
     "NO_POSITION": "(invisible)",
     "ADD_ENTRY": "Ajouter une entrée",
-    "NEW_ENTRY_NAME": "(enter name of new entry)",
+    "NEW_ENTRY_NAME": "Entrer le nom",
     "DELETE_ENTRY": "Supprimer",
-    "UNSAVED_CHANGES": "Changements non sauvegarder",
+    "UNSAVED_CHANGES": "Changements non sauvegardés",
     "OK": "Ok",
     "DISCARD": "Ignorer les changements",
     "CANCEL": "Annuler",
 
-    "NO_MODULES_LOADED": "Aucun module charger.",
+    "NO_MODULES_LOADED": "Aucun module chargé.",
     "SAVE": "Enregistrer",
 
     "EXPERIMENTAL": "Ceci est une fonctionnalitée expérimentale, elle peut casser votre configuration. Enregistrez votre configuration au cas ou!<br>Voulez vous continuer ?",
-    "PANIC": "Ca ne fait rien.",
-    "NO_RISK_NO_FUN": "On a qu'une vie !",
+    "PANIC": "Non, tant pis !",
+    "NO_RISK_NO_FUN": "On a qu'une vie ! Go !",
 
     "CONFIRM_SHUTDOWN": "Le système va s'éteindre.",
     "CONFIRM_RESTART": "Le système va redémarrer.",
