--- a/translations/es.json
+++ b/translations/es.json
@@ -2,7 +2,7 @@
     "TITLE": "Menu Magic Mirror",
 
     "EDIT_MENU_NAME": "Editar Vista",
-    "SHUTDOWN_MENU_NAME": "Funciones de encendido",
+    "SHUTDOWN_MENU_NAME": "Encendido",
     "CONFIGURE_MENU_NAME": "Editar config.js",
     "VIEW_MIRROR": "MagicMirror<sup>2</sup>",
 
@@ -29,13 +29,13 @@
     "CODE_LINK": "Ver código",
     "BY": "por",
     "ADD_THIS": "Añadir este módulo",
-    "HELP": "Ver Léeme",
+    "HELP": "Ver Readme",
     "MENU": "Menú",
     "RESET": "Reset",
     "NO_HEADER": "(sin cabecera)",
     "NO_POSITION": "(invisible)",
     "ADD_ENTRY": "Añadir entrada",
-    "NEW_ENTRY_NAME": "(namombre de la nueva entrada)",
+    "NEW_ENTRY_NAME": "(nombre de la nueva entrada)",
     "DELETE_ENTRY": "Borrar",
     "UNSAVED_CHANGES": "Cambios sin guardar",
     "OK": "Ok",
