--- a/translations/es.json
+++ b/translations/es.json
@@ -1,5 +1,5 @@
 {
-    "TITLE": "Menu Magic Mirror",
+    "TITLE": "Menú Magic Mirror",
 
     "EDIT_MENU_NAME": "Editar Vista",
     "SHUTDOWN_MENU_NAME": "Encendido",
