--- a/translations/en.json
+++ b/translations/en.json
@@ -60,7 +60,6 @@
 
     "DONE": "Done.",
     "ERROR": "Error!",
-    "RESPONSE_ERROR": "Well that didn't work. Check the MM logs for more details",
     "LOADING": "Loading &hellip;",
 
     "LOCKSTRING_WARNING": "This module was hidden by LIST_OF_MODULES, it can not be shown.",
@@ -80,5 +79,10 @@
     "FORM_TITLE_PLACEHOLDER" : "Enter title...",
     "FORM_MESSAGE" : "Message:",
     "FORM_MESSAGE_PLACEHOLDER" : "Enter message...",
-    "FORM_SECONDS" : "Seconds:"
+    "FORM_SECONDS" : "Seconds:",
+
+
+    "RESPONSE_ERROR": "Well that didn't work. Check the MM logs for more details",
+    "MODULE_CONTROLS": "Module Controls",
+    "CUSTOM_MENU": "My Custom Menu"
 }
