--- a/translations/nb.json
+++ b/translations/nb.json
@@ -18,8 +18,8 @@
     "RESTARTMM": "Restart MagicMirror<sup>2</sup>",
     "SHUTDOWN": "Slå av",
 
-    "SHOWALL": "AllE",
-    "HIDEALL": "AllE",
+    "SHOWALL": "Alle",
+    "HIDEALL": "Alle",
 
     "ADD_MODULE": "Legg til modul",
     "SEARCH": "Søk &hellip;",
