--- a/translations/fr.json
+++ b/translations/fr.json
@@ -1,52 +1,52 @@
 {
     "TITLE": "Magic Mirror Menu",
 
-    "EDIT_MENU_NAME": "Editer le nom du menu",
+    "EDIT_MENU_NAME": "Éditer le nom du menu",
     "SHUTDOWN_MENU_NAME": "Alimentation",
-    "CONFIGURE_MENU_NAME": "Editer le fichier config.js",
+    "CONFIGURE_MENU_NAME": "Éditer le fichier config.js",
     "VIEW_MIRROR": "MagicMirror<sup>2</sup>",
 
     "BACK": "Retour",
 
-    "BRIGHTNESS": "Luminositer",
+    "BRIGHTNESS": "Luminosité",
 
     "REFRESHMM" : "Recharger l'affichage",
-    "MONITOROFF": "Eteindre le miroire",
+    "MONITOROFF": "Éteindre le miroir",
     "MONITORON": "Allumer le miroir",
     "MONITORTIMED": "Allumer brièvement le miroir",
-    "RESTART": "Redemarrer",
-    "RESTARTMM": "Redemarrer MagicMirror<sup>2</sup>",
-    "SHUTDOWN": "Eteindre",
+    "RESTART": "Redémarrer",
+    "RESTARTMM": "Redémarrer MagicMirror<sup>2</sup>",
+    "SHUTDOWN": "Éteindre",
 
-    "SHOWALL": "Tour voir",
+    "SHOWALL": "Tout voir",
     "HIDEALL": "Tout cacher",
 
     "ADD_MODULE": "Ajouter un module",
     "SEARCH": "Rechercher &hellip;",
     "INSTALLED": "Installer",
-    "DOWNLOAD": "Telecharger",
-    "DOWNLOADING": "Telechargements &hellip;",
+    "DOWNLOAD": "Télécharger",
+    "DOWNLOADING": "Téléchargements &hellip;",
     "CODE_LINK": "Voir le code",
     "BY": "par",
     "ADD_THIS": "Ajouter ce module",
     "HELP": "Voir le readme",
     "MENU": "Menu",
-    "RESET": "Reinitialiser",
+    "RESET": "Réinitialiser",
     "NO_HEADER": "(no header)",
     "NO_POSITION": "(invisible)",
     "ADD_ENTRY": "Ajouter une entrée",
     "NEW_ENTRY_NAME": "(enter name of new entry)",
     "DELETE_ENTRY": "Supprimer",
-    "UNSAVED_CHANGES": "Changements non sauvegarder",
+    "UNSAVED_CHANGES": "Changements non sauvegardés",
     "OK": "Ok",
     "DISCARD": "Ignorer les changements",
     "CANCEL": "Annuler",
 
-    "NO_MODULES_LOADED": "Aucun module charger.",
+    "NO_MODULES_LOADED": "Aucun module chargé.",
     "SAVE": "Enregistrer",
 
-    "EXPERIMENTAL": "Ceci est une fonctionnalitée expérimentale, elle peut casser votre configuration. Enregistrez votre configuration au cas ou!<br>Voulez vous continuer ?",
-    "PANIC": "Ca ne fait rien.",
+    "EXPERIMENTAL": "Ceci est une fonctionnalité expérimentale, elle peut casser votre configuration. Enregistrez votre configuration au cas où !<br>Voulez vous continuer ?",
+    "PANIC": "Ça ne fait rien.",
     "NO_RISK_NO_FUN": "On a qu'une vie !",
 
     "CONFIRM_SHUTDOWN": "Le système va s'éteindre.",
