--- a/translations/es.json
+++ b/translations/es.json
@@ -17,7 +17,7 @@
     "RESTART": "Recargar",
     "RESTARTMM": "Recargar MagicMirror<sup>2</sup>",
     "SHUTDOWN": "Apagar RPi",
-    "FULLSCREEN": "Pantalla entera",
+    "FULLSCREEN": "Pantalla completa",
     "MINIMIZE": "Minimizar Navegador",
     "DEVTOOLS": "Abrir herram. para desarrolladores",
 
